# pfaedle

./: .dockerignore  .gitignore  .gitmodules  .pkg  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  cpplint.py  pfaedle.cfg  push-docker-image.sh
.github/workflows/: build.yml  container.yml
cmake/: FindLibZip.cmake  GetGitRevisionDescription.cmake  cpplint.cmake
eval/: Makefile  eval-wo-osm-line-rels.cfg  eval-wo-osm.cfg  eval.cfg
geo/: pfaedle.qgs
src/: CMakeLists.txt
src/pfaedle/: CMakeLists.txt  Def.h  PfaedleMain.cpp  _config.h.in
src/pfaedle/config/: ConfigReader.cpp  ConfigReader.h  MotConfig.h  MotConfigReader.cpp  MotConfigReader.h  PfaedleConfig.h
src/pfaedle/eval/: Collector.cpp  Collector.h  Result.h
src/pfaedle/gtfs/: Feed.h  Route.h  Service.h  ShapeContainer.h  ShapeContainer.tpp  StopTime.h  Writer.cpp  Writer.h
src/pfaedle/netgraph/: EdgePL.h  Graph.h  NodePL.h
src/pfaedle/osm/: BBoxIdx.cpp  BBoxIdx.h  Osm.h  OsmBuilder.cpp  OsmBuilder.h  OsmFilter.cpp  OsmFilter.h  OsmIdSet.cpp  OsmIdSet.h  OsmReadOpts.h  Restrictor.cpp  Restrictor.h
src/pfaedle/osm/output/: OsmWriter.h  PBFWriter.cpp  PBFWriter.h  XMLWriter.cpp  XMLWriter.h
src/pfaedle/osm/source/: OsmSource.h  PBFSource.cpp  PBFSource.h  XMLSource.cpp  XMLSource.h
src/pfaedle/router/: Comp.h  EdgePL.cpp  EdgePL.h  Graph.h  HopCache.cpp  HopCache.h  Misc.h  NodePL.h  Router.cpp  Router.h  Router.tpp  RoutingAttrs.h  ShapeBuilder.cpp  ShapeBuilder.h  Stats.h  TripTrie.cpp  TripTrie.h  TripTrie.tpp  Weights.cpp  Weights.h
src/pfaedle/statsimi-classifier/: StatsimiClassifier.cpp  StatsimiClassifier.h
src/pfaedle/tests/: CMakeLists.txt  TestMain.cpp
src/pfaedle/trgraph/: EdgePL.cpp  EdgePL.h  Graph.h  NodePL.cpp  NodePL.h  Normalizer.cpp  Normalizer.h  StatGroup.cpp  StatGroup.h  StatInfo.cpp  StatInfo.h
src/shapevl/: CMakeLists.txt  Collector.cpp  Collector.h  ShapevlMain.cpp
src/util/: CMakeLists.txt  Misc.h  Nullable.h  PriorityQueue.h  PriorityQueue.tpp  String.h
src/util/geo/: BezierCurve.h  BezierCurve.tpp  Box.h  CircularSegment.h  CircularSegment.tpp  Geo.h  GeoGraph.h  GeoNew.h  Grid.h  Grid.tpp  Line.h  Point.h  PolyLine.h  PolyLine.tpp  Polygon.h  QuadTree.h  QuadTree.tpp  RTree.h  RTree.tpp
src/util/geo/output/: GeoGraphJsonOutput.h  GeoGraphJsonOutput.tpp  GeoJsonOutput.cpp  GeoJsonOutput.h  GeoJsonOutput.tpp
src/util/graph/: Algorithm.h  Algorithm.tpp  BiDijkstra.cpp  BiDijkstra.h  BiDijkstra.tpp  Dijkstra.cpp  Dijkstra.h  Dijkstra.tpp  DirGraph.h  DirGraph.tpp  DirNode.h  DirNode.tpp  EDijkstra.cpp  EDijkstra.h  EDijkstra.tpp  Edge.h  Edge.tpp  Graph.h  Graph.tpp  Node.h  ShortestPath.h  UndirGraph.h  UndirGraph.tpp  UndirNode.h  UndirNode.tpp  radix_heap.h
src/util/http/: Server.cpp  Server.h
src/util/json/: JsonWriter.cpp  JsonWriter.h  Writer.cpp  Writer.h
src/util/log/: Log.h
src/util/tests/: CMakeLists.txt  QuadTreeTest.cpp  QuadTreeTest.h  TestMain.cpp  lest.h
src/util/xml/: XmlWriter.cpp  XmlWriter.h
